--- a/cems-api.yml
+++ b/cems-api.yml
@@ -2919,6 +2919,8 @@ paths:
           description: "Not authenticated"
         403:
           description: "Not authorized"
+        404:
+          description: "Filtered Report not found"
     put:
       tags:
         - "Reports"
@@ -3298,7 +3300,42 @@ paths:
           description: "Not authenticated"
         403:
           description: "Not authorized"
-  
+
+  /profile/merge:
+    post:
+      tags:
+        - "User"
+      summary: "Sets a merge request for a provided user and the current user"
+      description: ""
+      parameters:
+        - name: "body"
+          in: "body"
+          description: "user_id is the account to merge from<br>company_id is the account to merge from<br>email_id is the currently logged in user(merging to)"
+          required: true
+          schema:
+            type: "object"
+            required: 
+              - "user_id"
+              - "company_id"
+              - "email_id"
+            properties: 
+              user_id: 
+                type: "number"
+                example: 999999
+              company_id: 
+                type: "number"
+                example: 4
+              email_id: 
+                type: "number"
+                example: 218771
+      responses:
+        200:
+          description: "Success"
+        401:
+          description: "Not authenticated"
+        403:
+          description: "Not authorized"
+
   /profile/user/details:
     get:
       tags:
