--- a/cems-api.yml
+++ b/cems-api.yml
@@ -4331,6 +4331,32 @@ paths:
         404:
           description: "Company or course not found"
           
+  /company/{companyId}/providers:
+    get:
+      tags:
+        - "Company"
+      summary: "Get a list of Providers for a company"
+      description: ""
+      produces:
+        - "application/json"
+      parameters:
+        - name: "companyId"
+          in: "path"
+          description: ""
+          required: true
+          type: "integer"
+      responses:
+        200:
+          description: "Success"
+          schema:
+            $ref: "#/definitions/Provider"
+        401:
+          description: "Not authenticated"
+        403:
+          description: "Not authorized"
+        404:
+          description: "Company not found"
+
   /enrollment/{enrollmentId}:
     get:
       tags:
@@ -6645,7 +6671,24 @@ definitions:
           accreditations: 
             type: "string"
             example: "/api/v2/accreditations?courseId=9876&activeOnDate=2020-01-30"
-            
+
+  Provider:
+    type: "object"
+    required:
+      - "data"
+    properties:
+      data:
+        type: "array"
+        items:
+          type: "object"
+          properties:
+            id:
+              type: "number"
+              example: 2
+            name:
+              type: "string"
+              example: "provider_google"
+
   Accreditations:
     type: "object"
     required: 
